# rust_align

./: Cargo.toml  README.md  entrada.txt
src/: lib.rs  main.rs
