[package]
name = "rust_align"
version = "0.0.1"
authors = ["Rafael Carreira <github@rafael747.com>"]
description = "The Smith–Waterman and Needleman-Wunsch algorithms. Forked from https://github.com/sbeckeriv/smith_waterman"
repository = "https://github.com/rafael747/rust-align"
readme = "./README.md"
keywords = ["waterman", "smith", "smith-waterman", "needleman", "wunsch", "needleman-wunsch", "sequence", "alignment"]
license-file = "./LICENSE-MIT"

[dependencies]
nalgebra = "0.2.17"

[lib]
name = "lib_align"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`

